--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 </head>
 
 <body>
-    <nav
-        class="bg-orange-50 shadow-lg dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
+    <nav class="bg-orange-50 shadow-lg fixed w-full z-20 top-0 start-0 border-b border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo">
@@ -26,7 +25,7 @@
                     Reading
                 </button>
                 <button data-collapse-toggle="navbar-sticky" type="button"
-                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
                     aria-controls="navbar-sticky" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
                     <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -41,7 +40,7 @@
                     class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
                     <li>
                         <a href="index.html"
-                            class="block py-2 px-3 text-white bg-rose-500 rounded md:bg-orange-50 md:text-rose-500 md:p-0 md:dark:text-rose-500"
+                            class="block py-2 px-3 text-white bg-rose-500 rounded md:bg-orange-50 md:text-rose-500 md:p-0 "
                             aria-current="page">Home</a>
                     </li>
                     <li>
@@ -88,7 +87,7 @@
                     Now</a>
             </div>
             <div data-aos="flip-right" data-tilt data-tilt-max="5" data-tilt-scale="1.025">
-                <img src="../Three Little Pigs/assets/pigs-home.jpg"
+                <img src="assets/pigs-home.jpg"
                     class="rounded-3xl md:rotate-3 sm:rotate-0 sm:mt-12 sm:mb-24 mx-3 shadow">
             </div>
         </div>
