Fix responsiveness index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Three Little Pigs</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -20,10 +20,6 @@
                     Pigs</span>
             </a>
             <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-                <button type="button"
-                    class="text-white bg-rose-600 hover:bg-rose-500 serif focus:ring-4 focus:outline-none focus:ring-rose-300 font-medium rounded-3xl text-sm px-6 py-3 text-center">Start
-                    Reading
-                </button>
                 <button data-collapse-toggle="navbar-sticky" type="button"
                     class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
                     aria-controls="navbar-sticky" aria-expanded="false">
@@ -76,19 +72,19 @@
     </nav>
     <div class="h-screen py-20 flex justify-center bg-orange-50">
         <div
-            class="md:mx-52 sm:mx-20 grid md:grid-cols-2 sm:grid-cols-1 flex items-center lg:px-32 md:px-12 sm:px-4 gap-14">
-            <div class="flex-1">
+            class="md:mx-4 sm:mx-2 grid md:grid-cols-2 sm:grid-cols-1 lg:max-w-2xl md:max-w-lg sm:max-w-full flex items-center md:px-6 sm:px-4 gap-4">
+            <div class="flex-1 text-center md:text-left">
                 <h1 class="text-3xl serif">The Three Little Pigs Story</h1>
-                <p class="text-xl mt-6 mb-12">Three little pigs build houses from straw, sticks and bricks. Which house
+                <p class="text-xl mt-6 mb-12">Three little pigs build houses from straw, sticks, and bricks. Which house
                     can
                     keep them safe from the big bad wolf?</p>
                 <a href="introduction.html"
                     class="bg-rose-600 hover:bg-rose-500 text-white px-6 py-3 rounded-3xl text-md serif">Read
                     Now</a>
             </div>
-            <div data-aos="flip-right" data-tilt data-tilt-max="5" data-tilt-scale="1.025">
-                <img src="assets/pigs-home.jpg"
-                    class="rounded-3xl md:rotate-3 sm:rotate-0 sm:mt-12 sm:mb-24 mx-3 shadow">
+            <div data-aos="flip-right" data-tilt data-tilt-max="5" data-tilt-scale="1.025"
+                class="sm:mt-12 sm:mb-24 mx-3 md:text-right">
+                <img src="assets/pigs-home.jpg" class="rounded-3xl md:rotate-3 sm:rotate-0 sm:w-full mx-auto shadow">
             </div>
         </div>
     </div>
