--- a/introduction.html
+++ b/introduction.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Three Little Pigs - Introduction</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
@@ -20,10 +20,6 @@
                     Pigs</span>
             </a>
             <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-                <button type="button"
-                    class="text-white bg-rose-600 hover:bg-rose-500 serif focus:ring-4 focus:outline-none focus:ring-rose-300 font-medium rounded-3xl text-sm px-6 py-3 text-center">Start
-                    Reading
-                </button>
                 <button data-collapse-toggle="navbar-sticky" type="button"
                     class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 "
                     aria-controls="navbar-sticky" aria-expanded="false">
@@ -76,6 +72,16 @@
     </nav>
     <div class="flex justify-center min-h-screen py-20">
         <div class="lg:w-1/2 md:4/5 p-8">
+            <div
+                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Noteworthy technology
+                    acquisitions
+                    2021</h5>
+                <p class="font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology
+                    acquisitions of
+                    2021 so far, in reverse chronological order.</p>
+            </div>
             <h1 class="text-3xl font-black mb-24 text-center">THE THREE LITTLE PIG INTRODUCTION</h1>
             <p class="leading-8 text-lg">
                 Once upon a time, there lived an old mother pig. She had three little pigs.
