Add author info in introduction:

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </nav>
     <div class="h-screen py-20 flex justify-center bg-orange-50">
         <div
-            class="md:mx-4 sm:mx-2 grid md:grid-cols-2 sm:grid-cols-1 lg:max-w-2xl md:max-w-lg sm:max-w-full flex items-center md:px-6 sm:px-4 gap-4">
+            class="md:mx-4 sm:mx-2 grid md:grid-cols-2 sm:grid-cols-1 lg:max-w-4xl md:max-w-2xl sm:max-w-full flex items-center md:px-6 sm:px-4 gap-4">
             <div class="flex-1 text-center md:text-left">
                 <h1 class="text-3xl serif">The Three Little Pigs Story</h1>
                 <p class="text-xl mt-6 mb-12">Three little pigs build houses from straw, sticks, and bricks. Which house
@@ -84,7 +84,8 @@
             </div>
             <div data-aos="flip-right" data-tilt data-tilt-max="5" data-tilt-scale="1.025"
                 class="sm:mt-12 sm:mb-24 mx-3 md:text-right">
-                <img src="assets/pigs-home.jpg" class="rounded-3xl md:rotate-3 sm:rotate-0 sm:w-full mx-auto shadow">
+                <img src="assets/pigs-home.jpg"
+                    class="rounded-3xl md:rotate-3 sm:mb-5 sm:rotate-0 sm:w-full mx-auto shadow">
             </div>
         </div>
     </div>
