--- a/introduction.html
+++ b/introduction.html
@@ -41,7 +41,7 @@
                     </li>
                     <li>
                         <a href="#"
-                            class="block py-2 px-3 bg-rose-500 rounded md:bg-orange-50 md:text-rose-500 md:p-0">Introduction</a>
+                            class="block py-2 px-3 text-white bg-rose-500 rounded md:bg-orange-50 md:text-rose-500 md:p-0 ">Introduction</a>
                     </li>
                     <li>
                         <a href="#"
@@ -72,16 +72,39 @@
     </nav>
     <div class="flex justify-center min-h-screen py-20">
         <div class="lg:w-1/2 md:4/5 p-8">
-            <div
-                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Noteworthy technology
-                    acquisitions
-                    2021</h5>
-                <p class="font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology
-                    acquisitions of
-                    2021 so far, in reverse chronological order.</p>
+            <div id="accordion-collapse" data-accordion="collapse" class="mb-12">
+                <h2 id="accordion-collapse-heading-3">
+                    <button type="button"
+                        class="flex items-center justify-between w-full p-5 rounded-xl font-medium rtl:text-right text-gray-500 border border-gray-200 focus:ring-4 focus:ring-gray-200 gap-3"
+                        data-accordion-target="#accordion-collapse-body-3" aria-expanded="false"
+                        aria-controls="accordion-collapse-body-3">
+                        <span>What are the sources of The Three Little Pigs?</span>
+                        <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 5 5 1 1 5" />
+                        </svg>
+                    </button>
+                </h2>
+                <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
+                    <div class="p-5 border border-t-0 border-gray-200 rounded-b-xl">
+                        <p class="mb-2 text-gray-500 italic">The story of <strong>The Three Little Pigs
+                            </strong>featured here
+                            has been adapted
+                            from different sources and from childhood memory. The
+                            primary sources are <strong>English Fairy Tales</strong>, retold by Flora Annie Steel
+                            (1922). This story is featured in our <a
+                                href="https://americanliterature.com/fairy-tales-guide/" class="text-blue-600"> Fairy
+                                Tales
+                            </a>and
+                            <a href="https://americanliterature.com/short-stories-for-children/" class="text-blue-600">
+                                Children's
+                                Stories</a>.
+                        </p>
+                    </div>
+                </div>
             </div>
+
             <h1 class="text-3xl font-black mb-24 text-center">THE THREE LITTLE PIG INTRODUCTION</h1>
             <p class="leading-8 text-lg">
                 Once upon a time, there lived an old mother pig. She had three little pigs.
