--- a/pig1.html
+++ b/pig1.html
@@ -2,13 +2,127 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Three Little Pigs</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 
 <body>
+    <nav class="bg-orange-50 shadow-lg fixed w-full z-20 top-0 start-0 border-b border-gray-200">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+            <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
+                <span class="self-center text-2xl font-bold whitespace-nowrap text-rose-500">The Three Little
+                    Pigs</span>
+            </a>
+            <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+                <button data-collapse-toggle="navbar-sticky" type="button"
+                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
+                    aria-controls="navbar-sticky" aria-expanded="false">
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 17 14">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M1 1h15M1 7h15M1 13h15" />
+                    </svg>
+                </button>
+            </div>
+            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+                <ul
+                    class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
+                    <li>
+                        <a href="index.html"
+                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Home</a>
+                    </li>
+                    <li>
+                        <a href="introduction.html"
+                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Introduction</a>
+                    </li>
+                    <li>
+                        <a href="pig1.html"
+                            class="block py-2 px-3 text-white bg-rose-500 rounded md:bg-orange-50 md:text-rose-500 md:p-0"
+                            aria-current="page">Pig 1
+                        </a>
+                    </li>
+                    <li>
+                        <a href="pig2.html"
+                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Pig
+                            2
+                        </a>
+                    </li>
+                    <li>
+                        <a href="pig3.html"
+                            class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:hover:text-rose-500 md:p-0">Pig
+                            3
+                        </a>
+                    </li>
+                    <li>
+                        <a href="conclusion.html"
+                            class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:hover:text-rose-500 md:p-0">Conclusion
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <div class="flex justify-center min-h-screen py-20">
+        <div class="lg:w-1/2 md:4/5 p-8">
+            <h1 class="text-3xl text-center" style="font-family: PWFicelles;">The Straw</h1>
+            <p class="leading-8 text-lg">
+                The first piglet was very lazy and did not like to work at all, so he decided to create his house out of
+                <span style="font-family:PWFicelles"> straw</span>
+            </p>
+            <img src="assets/straw-house.jpg" class="py-8" data-aos="flip-right">
+            <br>
+            <br>
+            <p class="leading-8 text-lg">
+                The piglet quickly built his house, then celebrated. He played, sang, and danced for the rest of the
+                day.
+            </p>
+            <img src="assets/straw-house-done.webp" class="py-8" data-aos="flip-right">
+            <br>
+            <br>
+            <p class="leading-8 text-lg">
+                The following day, a wolf stumbled upon the area where the little pigs lived. He saw the <span
+                    style="font-family:PWFicelles"> straw</span> house and smelled the aromatic scent of the pig, which
+                made his mouth water.
+            </p>
+            <img src="assets/wolf-arrive.jpg" class="mx-auto" data-aos="flip-right">
+            <br>
+            <br>
+            <p class="leading-8 text-lg">
+                Luckily, the piglet was inside the house. The wolf knocked and said, "Little pig, let me in." The pig
+                saw the wolf's big paws through the keyhole, so he answered, "No! Not by the hairs of my chinny chin
+                chin!"
+            </p>
+            <img src="assets/wolf-denied-entry.jpg" class="mx-auto" data-aos="flip-right">
+            <br>
+            <br>
+            <p class="leading-8 text-lg">
+                The wolf, a bit annoyed, said, "Then I'll huff and I'll puff and I'll blow your house down." So the wolf
+                successfully blew the straw house down.
+            </p>
+            <img src="assets/wolf-huff.jpg" class="mx-auto" data-aos="flip-right">
+            <br>
+            <br>
+            <p class="leading-8 text-lg">
+                However, before he could enjoy his supper, the piglet swiftly ran away and hid with the second piglet.
+            </p>
+            <img src="assets/straw-pig-run.jpg" class="mx-auto" data-aos="flip-right">
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script type="text/javascript" src="vanilla-tilt.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
