--- a/pig2.html
+++ b/pig2.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Three Little Piggies - 2nd Pig's Stick House</title>
+    <title>The Three Little Pigs - </title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="bg-orange-50 shadow-lg fixed w-full z-20 top-0 start-0 border-b border-gray-200 ">
+    <nav class="bg-orange-50 shadow-lg fixed w-full z-20 top-0 start-0 border-b border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo">
@@ -18,7 +21,7 @@
             </a>
             <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
                 <button data-collapse-toggle="navbar-sticky" type="button"
-                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 "
+                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
                     aria-controls="navbar-sticky" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
                     <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -33,33 +36,33 @@
                     class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
                     <li>
                         <a href="index.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0"
+                            class="block py-2 px-3 text-white bg-rose-500 rounded md:bg-orange-50 md:text-rose-500 md:p-0 "
                             aria-current="page">Home</a>
                     </li>
                     <li>
-                        <a href="#"
-                            class="block py-2 px-3 text-white bg-rose-500 rounded md:bg-orange-50 md:text-rose-500 md:p-0 ">Introduction</a>
+                        <a href="introduction.html"
+                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Introduction</a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="pig1.html"
                             class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Pig
                             1
                         </a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="pig2.html"
                             class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Pig
                             2
                         </a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="pig3.html"
                             class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:hover:text-rose-500 md:p-0">Pig
                             3
                         </a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="conclusion.html"
                             class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:hover:text-rose-500 md:p-0">Conclusion
                         </a>
                     </li>
@@ -68,9 +71,58 @@
         </div>
     </nav>
 
-    <!-- <div class="">
+    <div class="flex justify-center min-h-screen py-20">
+        <section id="introduction">
+            <p>
+                The first little pig was frightened as he escaped and ran away to hide with the second little pig.
+            </p>
+            <p>
+                The wolf continued down the lane and he passed by the second house made of sticks; and he saw the house,
+                and he smelled the pigs inside, and his mouth began to water as he thought about the fine dinner they
+                would
+                make.
+            </p>
+        </section>
+        <section id="Character">
+            <p>
+                But second little pig worked a little bit harder than the first but he was somewhat lazy too and he
+                built
+                his house out of sticks.
+            </p>
+        </section>
+        <section id="Confrontation">
+            <p>
+                So the wold knocked on the door and said:
+            </p>
+            <p>
+                Little pigs! Little pigs!
+                Let me in! Let me in!
+                But the little pigs saw the wolf's pointy ears through the keyhole, so they answered back:
+            </p>
+            <p>
+                No! No! No!
+                Not by the hairs on our chinny chin chin!
+                So the wolf showed his teeth and said:
+            </p>
+            <p>
+                Then I'll huff
+                and I'll puff
+                and I'll blow your house down!
+            </p>
+        </section>
+        <section id="introduction">
+            <p>
 
-    </div> -->
+            </p>
+        </section>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script type="text/javascript" src="vanilla-tilt.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
