--- a/pig3.html
+++ b/pig3.html
@@ -4,11 +4,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Three Little Pigs - </title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
+    <nav class="bg-orange-50 shadow-lg fixed w-full z-20 top-0 start-0 border-b border-gray-200">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+            <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo">
+                <span class="self-center text-2xl font-bold whitespace-nowrap text-rose-500">The Three Little
+                    Pigs</span>
+            </a>
+            <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+                <button data-collapse-toggle="navbar-sticky" type="button"
+                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
+                    aria-controls="navbar-sticky" aria-expanded="false">
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 17 14">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M1 1h15M1 7h15M1 13h15" />
+                    </svg>
+                </button>
+            </div>
+            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+                <ul
+                    class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
+                    <li>
+                        <a href="index.html"
+                            class="block py-2 px-3 text-white bg-rose-500 rounded md:bg-orange-50 md:text-rose-500 md:p-0 "
+                            aria-current="page">Home</a>
+                    </li>
+                    <li>
+                        <a href="introduction.html"
+                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Introduction</a>
+                    </li>
+                    <li>
+                        <a href="pig1.html"
+                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Pig
+                            1
+                        </a>
+                    </li>
+                    <li>
+                        <a href="pig2.html"
+                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Pig
+                            2
+                        </a>
+                    </li>
+                    <li>
+                        <a href="pig3.html"
+                            class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:hover:text-rose-500 md:p-0">Pig
+                            3
+                        </a>
+                    </li>
+                    <li>
+                        <a href="conclusion.html"
+                            class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:hover:text-rose-500 md:p-0">Conclusion
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <section class="container mx-auto py-16">
+        <h2 class="text-3xl font-semibold mb-8 text-center">The Third Little Pig</h2>
+        <p class="text-xl text-gray-700 leading-8 mb-8">The third little pig worked hard all day and built his house
+            with
+            bricks. It was a sturdy house complete with a fine fireplace and chimney. It looked like it could withstand
+            the
+            strongest winds.</p>
+
+
+        <p class="text-xl text-gray-700 leading-8 mb-8">The wolf chased them down the lane and he almost caught them.
+            But
+            they made it to the brick house and slammed the door closed before the wolf could catch them. The three
+            little
+            pigs they were very frightened, they knew the wolf wanted to eat them. And that was very, very true. The
+            wolf
+            hadn't eaten all day and he had worked up a large appetite chasing the pigs around and now he could smell
+            all
+            three of them inside and he knew that the three little pigs would make a lovely feast.</p>
+
+
+    </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script type="text/javascript" src="vanilla-tilt.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
