Fix author info

--- a/pig2.html
+++ b/pig2.html
@@ -110,9 +110,17 @@
                 and I'll blow your house down!
             </p>
         </section>
-        <section id="introduction">
+        <section id="Climax">
             <p>
-
+                So he huffed and he puffed and he blew the house down! The wolf was greedy and he tried to
+                catch both pigs at once, but he was too greedy and got neither! His big jaws clamped down on
+                nothing but air and the two little pigs scrambled away as fast as their little hooves would carry them.
+            </p>
+        </section>
+        <section id="Conclusion">
+            <p>
+                The wolf chased them down the lane and he almost caught them.
+                But they made it to the brick house and slammed the door closed before the wolf could catch them.
             </p>
         </section>
     </div>
