--- a/introduction.html
+++ b/introduction.html
@@ -76,7 +76,7 @@
                 <h2 id="accordion-collapse-heading-3">
                     <button type="button"
                         class="flex items-center justify-between w-full p-5 rounded-xl font-medium rtl:text-right text-gray-500 border border-gray-200 focus:ring-4 focus:ring-gray-200 gap-3"
-                        data-accordion-target="#accordion   -collapse-body-3" aria-expanded="false"
+                        data-accordion-target="#accordion-collapse-body-3" aria-expanded="false"
                         aria-controls="accordion-collapse-body-3">
                         <span>What are the sources of The Three Little Pigs?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
