Add detailed pagination

--- a/introduction.html
+++ b/introduction.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Three Little Pigs - Page 1 - Introduction</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/x-icon" href="assets/3pigs.ico">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -80,13 +81,33 @@
             <img src="assets/intro-wolf.jpg" data-aos="flip-right">
             <div class="flex justify-end pt-20">
                 <a href="index.html"
-                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-500 rounded-s-3xl hover:bg-pink-600">
+                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-400 rounded-s-3xl hover:bg-pink-500">
                     <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                         fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M13 5H1m0 0 4 4M1 5l4-4" />
                     </svg>
                     Home
+                </a>
+                <a href="introduction.html"
+                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-500 hover:bg-pink-600">
+                    1
+                </a>
+                <a href="pig1.html"
+                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-300 hover:bg-pink-400">
+                    2
+                </a>
+                <a href="pig2.html"
+                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-300 hover:bg-pink-400">
+                    3
+                </a>
+                <a href="pig3.html"
+                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-300 hover:bg-pink-400">
+                    4
+                </a>
+                <a href="conclusion.html"
+                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-300 hover:bg-pink-400">
+                    5
                 </a>
                 <a href="pig1.html"
                     class="flex items-center justify-center px-3 h-10 piggy-font text-md font-medium text-white bg-pink-400 rounded-e-3xl hover:bg-pink-500">
