--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                     <a href="#" class="hover:underline me-4 md:me-6">Arcega, Lance</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline">David, Ivan</a>
+                    <a href="#" class="hover:underline me-4 md:me-6">David, Ivan</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline">David, Ivan</a>
+                    <a href="#" class="hover:underline me-4 md:me-6">David, Ivan</a>
                 </li>
             </ul>
         </div>
