--- a/introduction.html
+++ b/introduction.html
@@ -81,7 +81,7 @@
             <img src="assets/intro-wolf.jpg" data-aos="flip-right">
             <div class="flex justify-end pt-20">
                 <a href="index.html"
-                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-400 rounded-s-3xl hover:bg-pink-500">
+                    class="flex items-center piggy-font justify-center px-3 h-10 text-md sm:text-sm  font-medium text-white bg-pink-400 rounded-s-3xl hover:bg-pink-500">
                     <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                         fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -110,7 +110,7 @@
                     5
                 </a>
                 <a href="pig1.html"
-                    class="flex items-center justify-center px-3 h-10 piggy-font text-md font-medium text-white bg-pink-400 rounded-e-3xl hover:bg-pink-500">
+                    class="flex items-center justify-center px-3 h-10 piggy-font text-md font-medium sm:text-sm text-white bg-pink-400 rounded-e-3xl hover:bg-pink-500">
                     Next Page
                     <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                         fill="none" viewBox="0 0 14 10">
@@ -137,10 +137,10 @@
                     <a href="#" class="hover:underline me-4 md:me-6">Arcega, Lance</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline">David, Ivan</a>
+                    <a href="#" class="hover:underline me-4 md:me-6">David, Ivan</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline">Salem, Jamaica</a>
+                    <a href="#" class="hover:underline me-4 md:me-6">Salem, Jamaica</a>
                 </li>
             </ul>
         </div>
