--- a/pig1.html
+++ b/pig1.html
@@ -75,7 +75,7 @@
             <img src="assets/straw-pig-run.jpg" class="mx-auto" data-aos="flip-right">
             <div class="flex justify-end pt-20">
                 <a href="introduction.html"
-                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-400 rounded-s-3xl hover:bg-pink-500">
+                    class="flex items-center sm:text-sm  piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-400 rounded-s-3xl hover:bg-pink-500">
                     <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                         fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -84,27 +84,27 @@
                     Previous Page
                 </a>
                 <a href="introduction.html"
-                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-300 hover:bg-pink-400">
+                    class="flex items-center piggy-font justify-center px-3 h-10 text-md sm:text-sm font-medium text-white bg-pink-300 hover:bg-pink-400">
                     1
                 </a>
                 <a href="pig1.html"
-                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-500 hover:bg-pink-600">
+                    class="flex items-center piggy-font justify-center px-3 h-10 text-md sm:text-sm font-medium text-white bg-pink-500 hover:bg-pink-600">
                     2
                 </a>
                 <a href="pig2.html"
-                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-300 hover:bg-pink-400">
+                    class="flex items-center piggy-font justify-center px-3 h-10 text-md sm:text-sm font-medium text-white bg-pink-300 hover:bg-pink-400">
                     3
                 </a>
                 <a href="pig3.html"
-                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-300 hover:bg-pink-400">
+                    class="flex items-center piggy-font justify-center px-3 h-10 text-md sm:text-sm font-medium text-white bg-pink-300 hover:bg-pink-400">
                     4
                 </a>
                 <a href="conclusion.html"
-                    class="flex items-center piggy-font justify-center px-3 h-10 text-md font-medium text-white bg-pink-300 hover:bg-pink-400">
+                    class="flex items-center piggy-font justify-center px-3 h-10 text-md sm:text-sm font-medium text-white bg-pink-300 hover:bg-pink-400">
                     5
                 </a>
                 <a href="pig2.html"
-                    class="flex items-center justify-center px-3 h-10 piggy-font text-md font-medium text-white bg-pink-400 rounded-e-3xl hover:bg-pink-500">
+                    class="flex items-center justify-center px-3 h-10 piggy-font text-md font-medium sm:text-sm text-white bg-pink-400 rounded-e-3xl hover:bg-pink-500">
                     Next Page
                     <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                         fill="none" viewBox="0 0 14 10">
