--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a href="#" class="hover:underline me-4 md:me-6">David, Ivan</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">David, Ivan</a>
+                    <a href="#" class="hover:underline me-4 md:me-6">Salem, Jamaica</a>
                 </li>
             </ul>
         </div>
