--- a/pig2.html
+++ b/pig2.html
@@ -46,7 +46,7 @@
             <br>
             <br>
             <p class="leading-8 text-lg">
-                So the wold knocked on the door and said:
+                So the world knocked on the door and said:
             </p>
             <br>
             <p class="leading-8 text-lg">
