--- a/pig2.html
+++ b/pig2.html
@@ -25,7 +25,7 @@
 
     <div class="flex justify-center min-h-screen py-20">
         <div class="lg:w-1/2 md:4/5 p-8">
-            <h1 class="text-3xl text-center" style="font-family: Wood;">The Wooden</h1>
+            <h1 class="text-3xl text-center" style="font-family: Wood;">THE WOODEN</h1>
             <p class="leading-8 text-lg">
                 The first little pig was frightened as he escaped and ran away to hide with the second little pig.
             </p>
